Solve day 12